--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 </div>
             </div>
         </div>
-        <div class="erase">
+        <!-- <div class="erase">
             <button class="effTab">Effacer Tableau</button>
-        </div>
+        </div> -->
         <div class="deux">
             <input type="text" class="dossier2 do" placeholder=" Numero dossier">
             <textarea class="tache2 ta"></textarea>
