--- a/index.html
+++ b/index.html
@@ -13,31 +13,17 @@
             <input type="text" class="dossier1 do" placeholder=" Numero dossier">
             <textarea class="tache1 ta"></textarea>
             <div class="timer1 ti">
-                <p class="haut"><time>00:00:00</time></p>
+                <p class="haut"><time>0h : 0min</time></p>
                 <div class="but">
                     <button class="srt" id="strt">start</button>
                     <button class="stp" id="stp">pause</button>
-                    <button class="rst" id="rst">reset</button>
                     <button class="push">vers tableau</button>
                 </div>
             </div>
-        </div>
-        <div class="erase">
-            <button class="effTab">Effacer Tableau</button>
-        </div>
-        <div class="deux">
-            <input type="text" class="dossier2 do" placeholder=" Numero dossier">
-            <textarea class="tache2 ta"></textarea>
-            <div class="timer2 ti">
-                <p class="mid"><time>00:00:00</time></p>
-                <div class="but">
-                    <button class="srt" id="strt1">start</button>
-                    <button class="stp" id="stp1">pause</button>
-                    <button class="rst" id="rst1">reset</button>
-                    <button class="push1">vers tableau</button>
-                </div>
-            </div>
-        </div>
+        </div>       
+    </div>
+    <div class="erase">
+        <button class="effTab">Effacer Tableau</button>
     </div>
 
     <div class="tableau">
