--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input type="text" class="dossier1 do" placeholder=" Numero dossier">
             <textarea class="tache1 ta"></textarea>
             <div class="timer1 ti">
-                <p class="haut"><time>0h : 0min</time></p>
+                <p class="haut"><time>0:0</time></p>
                 <div class="but">
                     <button class="srt" id="strt">start</button>
                     <button class="stp" id="stp">pause</button>
