--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <div class="tableau">
         <p class="date">test</p>
+        
         <table>
             <tr>
                 <th>Dossiers</th>
@@ -36,7 +37,11 @@
             </tr>
         </table>
     </div>
-
+    <div class="sav">
+        <button class="save">sauvegarder modification</button>
+        <p class="ok">Sauvegarde effectuée</p>
+    </div>
+    
    
 </body>
 <script src="script.js"></script>
